force-app/main/default/objects/Aobject__c/fields/Ac__c.field-meta.xml
<CustomField>
    <fullName>Ac__c</fullName>
    <externalId>true</externalId>
    <label>AC項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>