force-app/main/default/objects/Aobject__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>A主オブジェクト</relationshipLabel>
    <relationshipName>A</relationshipName>
    <type>Lookup</type>
</CustomField>