force-app/main/default/objects/Aobject__c/fields/Mail02__c.field-meta.xml
<CustomField>
    <fullName>Mail02__c</fullName>
    <label>メール02</label>
    <type>Email</type>
</CustomField>