force-app/main/default/objects/Aobject__c/fields/Mail03__c.field-meta.xml
<CustomField>
    <fullName>Mail03__c</fullName>
    <label>メール03</label>
    <type>Email</type>
</CustomField>