force-app/main/default/objects/Aobject__c/fields/SelectList_A__c.field-meta.xml
<CustomField>
    <fullName>SelectList_A__c</fullName>
    <label>選択リストA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>